--- a/budget-planer/pom.xml
+++ b/budget-planer/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>BudgetPlaner</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>BufgetPlanner</name>
+    <name>BudgetPlanner</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -61,7 +61,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.bufgetplanner/org.example.bufgetplanner.HelloApplication</mainClass>
+                            <mainClass>org.example.budgetplaner/org.example.budgetplaner.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
