--- a/budget-planer/pom.xml
+++ b/budget-planer/pom.xml
@@ -67,7 +67,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.budgetplaner/org.example.budgetplaner.HelloApplication</mainClass>
+                            <mainClass>org/example/budgetplaner/AccountView.java</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
